# esp-openthread

./: .gitignore
build_openthread/: build.sh
esp-openthread/: Cargo.toml
esp-openthread-sys/: Cargo.toml  build.rs
esp-openthread-sys/include/: include.h
esp-openthread-sys/src/: bindings.rs  lib.rs
esp-openthread/src/: error.rs  lib.rs  platform.rs  radio.rs  srp_client.rs  timer.rs
esp-openthread/src/net/: mod.rs  udp.rs
examples/: Cargo.toml
examples/esp-openthread-example/: Cargo.toml
examples/esp-openthread-example/src/: main.rs
examples/ftd/: Cargo.toml
examples/ftd/.cargo/: config.toml
examples/ftd/src/: main.rs
examples/mtd/: Cargo.toml
examples/mtd/src/: main.rs
