[package]
name = "mtd"
version = "0.1.0"
authors = ["nand-nor <a13xandra.cliff0rd@gmail.com>"]
edition = "2021"


[profile.release]
debug = true

[dependencies]
esp-hal = {version= "0.20.1", git = "https://github.com/esp-rs/esp-hal.git", rev="c0a9934"}
esp-backtrace = { version="0.14.0", git = "https://github.com/esp-rs/esp-hal.git", features = ["panic-handler", "exception-handler", "println"], rev="c0a9934"}
esp-println       = { version= "0.11.0", git = "https://github.com/esp-rs/esp-hal.git", features = ["log"], rev="c0a9934"}
esp-ieee802154 = {version= "0.2.0", git = "https://github.com/esp-rs/esp-hal.git", rev="c0a9934"}
log = "0.4.21"
heapless = "0.8.0"
no-std-net = "0.6.0"
critical-section = "1.1.0"
static_cell = "2.1.0"
esp-openthread = { path = "../../esp-openthread" }

[features]
default = ["esp-openthread/mtd"]
esp32c6 = [ "esp-hal/esp32c6", "esp-ieee802154/esp32c6", "esp-openthread/esp32c6", "esp-backtrace/esp32c6", "esp-println/esp32c6"]#, "esp-hal-smartled/esp32c6" ]
esp32h2 = [ "esp-hal/esp32h2", "esp-ieee802154/esp32h2", "esp-openthread/esp32h2", "esp-backtrace/esp32h2", "esp-println/esp32h2"]#, "esp-hal-smartled/esp32h2" ]

